--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,11 @@ matrix:
     - env: KITCHEN_PLATFORM=debian KITCHEN_SCRIPT=2.2
     - env: KITCHEN_PLATFORM=debian KITCHEN_SCRIPT=2.3
     - env: KITCHEN_PLATFORM=debian KITCHEN_SCRIPT=2.4
+    - env: KITCHEN_PLATFORM=debian KITCHEN_SCRIPT=2.5
     - env: KITCHEN_PLATFORM=debian KITCHEN_SCRIPT=stable
     - env: KITCHEN_PLATFORM=centos KITCHEN_SCRIPT=2.1
     - env: KITCHEN_PLATFORM=centos KITCHEN_SCRIPT=2.2
     - env: KITCHEN_PLATFORM=centos KITCHEN_SCRIPT=2.3
     - env: KITCHEN_PLATFORM=centos KITCHEN_SCRIPT=2.4
+    - env: KITCHEN_PLATFORM=centos KITCHEN_SCRIPT=2.5
     - env: KITCHEN_PLATFORM=centos KITCHEN_SCRIPT=stable
