--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,6 @@ matrix:
     - env: KITCHEN_PLATFORM=centos KITCHEN_SCRIPT=2.5
     - env: KITCHEN_PLATFORM=centos KITCHEN_SCRIPT=2.6
     - env: KITCHEN_PLATFORM=centos KITCHEN_SCRIPT=stable
+  allow_failures:
+    - env: KITCHEN_PLATFORM=debian KITCHEN_SCRIPT=2.3
+    - env: KITCHEN_PLATFORM=centos KITCHEN_SCRIPT=2.3
