Add script for Ruby 2.7.0

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,13 @@ matrix:
     - env: KITCHEN_PLATFORM=debian KITCHEN_SCRIPT=2.4
     - env: KITCHEN_PLATFORM=debian KITCHEN_SCRIPT=2.5
     - env: KITCHEN_PLATFORM=debian KITCHEN_SCRIPT=2.6
+    - env: KITCHEN_PLATFORM=debian KITCHEN_SCRIPT=2.7
     - env: KITCHEN_PLATFORM=debian KITCHEN_SCRIPT=stable
     - env: KITCHEN_PLATFORM=centos KITCHEN_SCRIPT=2.3
     - env: KITCHEN_PLATFORM=centos KITCHEN_SCRIPT=2.4
     - env: KITCHEN_PLATFORM=centos KITCHEN_SCRIPT=2.5
     - env: KITCHEN_PLATFORM=centos KITCHEN_SCRIPT=2.6
+    - env: KITCHEN_PLATFORM=centos KITCHEN_SCRIPT=2.7
     - env: KITCHEN_PLATFORM=centos KITCHEN_SCRIPT=stable
   allow_failures:
     - env: KITCHEN_PLATFORM=debian KITCHEN_SCRIPT=2.3
