--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ "master" ]
+    branches: ["master"]
   pull_request:
-    branches: [ "master" ]
+    branches: ["master"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -16,14 +16,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        script: [ "3.2", "3.3", "3.4", "stable" ]
-        platform: [ "debian", "ubuntu" ]
+        script: ["3.2", "3.3", "3.4", "4.0", "stable"]
+        platform: ["debian", "ubuntu"]
     steps:
-    - uses: actions/checkout@v3
-    - uses: ruby/setup-ruby@v1
-      with:
-        ruby-version: ruby # latest stable release
-    - name: Install test dependencies
-      run: gem install --no-doc test-kitchen kitchen-docker
-    - name: Run Test Kitchen
-      run: env KITCHEN_PLATFORM=${{ matrix.platform }} KITCHEN_SCRIPT=${{ matrix.script }} kitchen test
+      - uses: actions/checkout@v6
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: ruby # latest stable release
+      - name: Install test dependencies
+        run: gem install --no-doc test-kitchen kitchen-docker
+      - name: Run Test Kitchen
+        run: env KITCHEN_PLATFORM=${{ matrix.platform }} KITCHEN_SCRIPT=${{ matrix.script }} kitchen test
